force-app/main/default/objects/IDR_Letter_Approval__c/IDR_Letter_Approval__c.object-meta.xml
<CustomObject>
    <label>Letter Approval</label>
    <nameField>
        <displayFormat>Comm#{000000}</displayFormat>
        <label>Letter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letter Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>