force-app/main/default/objects/IDR_Letter_Approval__c/fields/Customer_Data_updated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to identify if the customer data is added to the Approval record successfully</description>
    <label>Customer Data updated?</label>
    <type>Checkbox</type>
</CustomField>