force-app/main/default/objects/IDR_Letter_Approval__c/fields/IDR_Auto_Approve__c.field-meta.xml
<CustomField>
    <fullName>IDR_Auto_Approve__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This Check Box is ticked when there are no free text fields that are populated by the user in letter details so that the letter is auto approved.</description>
    <label>Auto Approve</label>
    <type>Checkbox</type>
</CustomField>