force-app/main/default/objects/IDR_Letter_Approval__c/fields/IDR_Case__c.field-meta.xml
<CustomField>
    <fullName>IDR_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Letter_Approval</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>