force-app/main/default/objects/IDR_Letter_Approval__c/fields/IDR_Send_As_Email__c.field-meta.xml
<CustomField>
    <fullName>IDR_Send_As_Email__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Should this letter be sent as email  ?</description>
    <label>Send As Email</label>
    <type>Checkbox</type>
</CustomField>