force-app/main/default/objects/IDR_Letter_Approval__c/fields/IDR_Send_As_Letter__c.field-meta.xml
<CustomField>
    <fullName>IDR_Send_As_Letter__c</fullName>
    <complianceGroup>Privacy - Non Personal Information;Integrity - Accurate</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Should this letter be sent as hard copy letter ?</description>
    <label>Send As Letter</label>
    <type>Checkbox</type>
</CustomField>