force-app/main/default/objects/IDR_Letter_Approval__c/fields/IDR_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>IDR_Template_Name__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>