force-app/main/default/objects/IDR_Letter_Approval__c/validationRules/VR01_Prevent_updates_after_send.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Prevent_updates_after_send</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(PRIORVALUE( IDR_Status__c)) = &apos;Sent&apos;</errorConditionFormula>
    <errorMessage>This Letter / Email has alreday been sent</errorMessage>
</ValidationRule>